# SplitNewtonpp

./: .gitignore  BUILD  CMakeLists.txt  LICENSE  MODULE.bazel  README.md  build.sh  coverage.sh  main.cpp  portfile.cmake  vcpkg.json
include/: newton.hpp  split_newton.hpp
include/examples/: test_functions.hpp
include/splitnewton/: helper.hpp  newton.hpp  split_newton.hpp
src/: newton.hpp  split_newton.hpp  typedefs.h
src/examples/: test_functions.hpp
tests/: BUILD  CMakeLists.txt  test_newton.cpp  test_split_newton.cpp
